test/corpus/action.txt
====================================
Rule/action/code block: Minimal
====================================
!re2c
  foo {}
  bar { }
  baz { foobar(); }

---

(re2c
  (global_block
    (body
      (ordinary_rule
        (pattern
          (regex (name)))
        (action))
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block)))
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block))))))

======================================================
Rule/action/code block: Nested blocks (matching pairs)
======================================================
!re2c
  foo {{}}
  bar {{}{}}
  baz {{{}}{{}}{{}}}

---

(re2c
  (global_block
    (body
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block)))
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block)))
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block))))))

===============================================================
Rule/action/code block: Nested blocks (missing closing bracket)
===============================================================
!re2c
  foo {{}
  bar {{{}
  baz {{{{{{}

---

(re2c
  (global_block
    (body
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block)))
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block)))
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block))))))


===============================================================
Rule/action/code block: Nesting {foo{}bar}
===============================================================
!re2c
  foo {foo{}bar}

---

(re2c
  (global_block
    (body
      (ordinary_rule
        (pattern
          (regex (name)))
        (action
          (code_block))))))
