test/corpus/configurations.txt
=========================================
Configuration/value/field expression (->)
=========================================
!re2c
  re2c:define:YYCURSOR = in->cur;
  re2c:define:YYMARKER = in->mar;
  re2c:define:YYLIMIT = in->lim;

---

(re2c
  (global_block
    (body
      (configuration
        (define
          option: (option_name)
          value: (field_expression
            argument: (identifier)
            field: (field_identifier))))
      (configuration
        (define
          option: (option_name)
          value: (field_expression
            argument: (identifier)
            field: (field_identifier))))
      (configuration
        (define
          option: (option_name)
          value: (field_expression
            argument: (identifier)
            field: (field_identifier)))))))

=========================================
Configuration/value/field expression (.)
=========================================
!re2c
  re2c:define:YYCURSOR = in.cur;
  re2c:define:YYMARKER = in.mar;
  re2c:define:YYLIMIT = in.lim;

---

(re2c
  (global_block
    (body
      (configuration
        (define
          option: (option_name)
          value: (field_expression
            argument: (identifier)
            field: (field_identifier))))
      (configuration
        (define
          option: (option_name)
          value: (field_expression
            argument: (identifier)
            field: (field_identifier))))
      (configuration
        (define
          option: (option_name)
          value: (field_expression
            argument: (identifier)
            field: (field_identifier)))))))
